# sproutanks

./: .gitignore  README.md
.github/workflows/: agent.yml  pages.yml
agent/: .clang-format  CMakeLists.txt  Dockerfile  compose.yml
agent/src/: agent.cpp  agent.h  game.cpp  game.h  main.cpp
game/: index.html  package-lock.json  package.json  vite.config.ts
game/public/: style.css
game/src/: bullet.ts  game.ts  main.ts  random.ts  tank.ts
game/src/input/: agent.ts  manual.ts
game/src/scenes/: index.ts  level.ts  menu.ts
